# keyboard-center

./: .gitignore  FUNDING.yml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: debbuilder-git.yml  debbuilder.yml  debbuilder.yml.disabled
keyboard_center/: __init__.py  __main__.py  mainwindow.py  newDeviceDebugger.py  service.py
keyboard_center/config/: config.py  constants.py  testconfig-example.yml
keyboard_center/devices/: allkeys.py  keyboard.py
keyboard_center/gui/: CEntryButton.py  CKeySequenceEdit.py  Ui_commandWidget.py  Ui_delayWidget.py  Ui_keypressWidget.py  Ui_mainwindow.py  customwidgets.py  keypressWidget.ui  mainwindow.ui  settingswindow.py  tray.py
keyboard_center/lib/: hid.py  pynotifier.py  utils.py
keyboard_center/lua/: lua.py
linux_packaging/: 60-keyboard-center.rules  60-keyboard-service.rules  DEBBUILD  DEBBUILD-git  g910gui.install  keyboard-center.install  uinput-keyboard-center.conf
linux_packaging/DEB-keyboard-center/: PKGBUILD  lure.sh  postinst  postrm  prerm
linux_packaging/DEB-keyboard-center-git/: PKGBUILD  prerm
linux_packaging/DEB-python3-uinput/: PKGBUILD  lure.sh
linux_packaging/assets/: G910-gui.desktop  G910-gui.sh  (+2 more)
lua_examples/: 01-simplekeyupdown.lua  02-simpleclick.lua  03-emithold.lua  04-osexec.lua  05-globalregister.lua  06-looptoggle.lua  README.md
src/: constants.py  g910-gui.service  keyboard-center.service  main.py  mainUi.py  mainwindow.py  newDeviceDebugger.py  requirements.txt  service.py
testing/: data.raw  hid.py  hidtest.py  openRGB.py  test.py  test1.py  test2.py  test4.py
(+67 files in other folders)
